--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "scripts": {
         "code:analyse": "./vendor/bin/phpstan analyse",
-        "code:format": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php"
+        "code:format": "./vendor/bin/php-cs-fixer fix"
     },
     "minimum-stability": "stable"
 }
